:bug: Fixed alignment issues

--- a/style.css
+++ b/style.css
@@ -312,7 +312,7 @@ h2 {
   background-size: 80px;
 }
 
-#About, #Work, #Blog, #Star {
+#About, #Work, #Blog, #YouTube, #Star {
   background: #FFF;
 }
 
